add deployment to the pipeline

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,17 +47,31 @@ jobs:
           java -javaagent:libs/jacocoagent.jar=destfile=jacoco.exec -cp out:libs/junit-4.13.2.jar:libs/hamcrest-core-1.3.jar \
           org.junit.runner.JUnitCore $classes
 
-      # Step 7: Generate JaCoCo XML report
+      # Step 6: Generate JaCoCo XML report
       - name: Generate JaCoCo XML report
         run: |
             mkdir -p target/site/jacoco  # Ensure the directory exists
             curl -L -o jacococli.jar https://repo1.maven.org/maven2/org/jacoco/org.jacoco.cli/0.8.7/org.jacoco.cli-0.8.7-nodeps.jar
             java -jar jacococli.jar report jacoco.exec --classfiles out --sourcefiles src --html target/site/jacoco --xml target/site/jacoco/jacoco.xml
 
-        # Step 6: Run SonarCloud Scan
+      # Step 7: Run SonarCloud Scan
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}    # SonarCloud authentication token
+
+      # Step 8: Package the application into a JAR file
+      - name: Package JAR
+        run: |
+          jar cfe mars-navigation.jar com.example.MarsRoverApp -C out .
+
+      # Step 9: Create a GitHub Release and upload the JAR
+      - name: Create Release and Upload JAR
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v1.0.0  # Update this to your versioning strategy
+          files: mars-navigation.jar
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub token for authentication
 
